# lliurex-screen-mirroring

./: CMakeLists.txt
debian/: changelog  control  copyright
locale/: ca@valencia.po  es.po  messages.pot
rsrc/: lliurex-screen-mirroring.desktop
src/: CMakeLists.txt  main.cpp  proxy.cpp  proxy.hpp  ui.qml
